Added frequency percentages as a subscript to each glyph

--- a/results/indus_glyphs_frequency.tex
+++ b/results/indus_glyphs_frequency.tex
@@ -21,154 +21,154 @@
 \endfoot
 \hline
 \endlastfoot
-/ / & \textIndus{} \\ \hline
-/ a/ & \textIndus{} \\ \hline
-/./ & \textIndus{} \\ \hline
-/.a/ & \textIndus{} \\ \hline
-/a/ & \textIndus{} \\ \hline
-/aa/ & \textIndus{} \\ \hline
-/aaa/ & \textIndus{} \\ \hline
-/aan/ & \textIndus{} \\ \hline
-/aaravaa/ & \textIndus{} \\ \hline
-/abaa/ & \textIndus{} \\ \hline
-/ada/ & \textIndus{} \\ \hline
-/adaa/ & \textIndus{} \\ \hline
-/aja/ & \textIndus{} \\ \hline
-/ajaa/ & \textIndus{} \\ \hline
-/ak/ & \textIndus{} \\ \hline
-/aka/ & \textIndus{} \\ \hline
-/akaa/ & \textIndus{} \\ \hline
-/ala/ & \textIndus{} \\ \hline
-/am/ & \textIndus{} \\ \hline
-/ama/ & \textIndus{} \\ \hline
-/amaa/ & \textIndus{} \\ \hline
-/amataa/ & \textIndus{} \\ \hline
-/an/ & \textIndus{} \\ \hline
-/ana/ & \textIndus{} \\ \hline
-/anaa/ & \textIndus{} \\ \hline
-/anaara/ & \textIndus{} \\ \hline
-/anan/ & \textIndus{} \\ \hline
-/ananan/ & \textIndus{} \\ \hline
-/annaa/ & \textIndus{} \\ \hline
-/antaraa/ & \textIndus{} \\ \hline
-/apa/ & \textIndus{} \\ \hline
-/ara/ & \textIndus{} \\ \hline
-/araa/ & \textIndus{} \\ \hline
-/as/ & \textIndus{} \\ \hline
-/asaa/ & \textIndus{} \\ \hline
-/asaas/ & \textIndus{} \\ \hline
-/asas/ & \textIndus{} \\ \hline
-/asi/ & \textIndus{} \\ \hline
-/asvaa/ & \textIndus{} \\ \hline
-/ata/ & \textIndus{} \\ \hline
-/ataa/ & \textIndus{} \\ \hline
-/atmaa/ & \textIndus{} \\ \hline
-/ava/ & \textIndus{} \\ \hline
-/avaa/ & \textIndus{} \\ \hline
-/ayaa/ & \textIndus{} \\ \hline
-/b/ & \textIndus{} \\ \hline
-/ba/ & \textIndus{} \\ \hline
-/baba/ & \textIndus{} \\ \hline
-/bada/ & \textIndus{} \\ \hline
-/c/ & \textIndus{} \\ \hline
-/ca/ & \textIndus{} \\ \hline
-/caa/ & \textIndus{} \\ \hline
-/cara/ & \textIndus{} \\ \hline
-/d/ & \textIndus{} \\ \hline
-/da/ & \textIndus{} \\ \hline
-/daa/ & \textIndus{} \\ \hline
-/daada/ & \textIndus{} \\ \hline
-/dad/ & \textIndus{} \\ \hline
-/dada/ & \textIndus{} \\ \hline
-/dadada/ & \textIndus{} \\ \hline
-/dak/ & \textIndus{} \\ \hline
-/di/ & \textIndus{} \\ \hline
-/g/ & \textIndus{} \\ \hline
-/ga/ & \textIndus{} \\ \hline
-/i/ & \textIndus{} \\ \hline
-/ii/ & \textIndus{} \\ \hline
-/iri/ & \textIndus{} \\ \hline
-/isan/ & \textIndus{} \\ \hline
-/j/ & \textIndus{} \\ \hline
-/ja/ & \textIndus{} \\ \hline
-/jara/ & \textIndus{} \\ \hline
-/jas/ & \textIndus{} \\ \hline
-/ji/ & \textIndus{} \\ \hline
-/k/ & \textIndus{} \\ \hline
-/ka/ & \textIndus{} \\ \hline
-/kara/ & \textIndus{} \\ \hline
-/ki/ & \textIndus{} \\ \hline
-/l/ & \textIndus{} \\ \hline
-/la/ & \textIndus{} \\ \hline
-/lala/ & \textIndus{} \\ \hline
-/m/ & \textIndus{} \\ \hline
-/ma/ & \textIndus{} \\ \hline
-/maa/ & \textIndus{} \\ \hline
-/maan/ & \textIndus{} \\ \hline
-/maha/ & \textIndus{} \\ \hline
-/mama/ & \textIndus{} \\ \hline
-/mara/ & \textIndus{} \\ \hline
-/mi/ & \textIndus{} \\ \hline
-/n/ & \textIndus{} \\ \hline
-/na/ & \textIndus{} \\ \hline
-/naaman/ & \textIndus{} \\ \hline
-/naan/ & \textIndus{} \\ \hline
-/nadan/ & \textIndus{} \\ \hline
-/naktan/ & \textIndus{} \\ \hline
-/namaa/ & \textIndus{} \\ \hline
-/namama/ & \textIndus{} \\ \hline
-/naran/ & \textIndus{} \\ \hline
-/narasan/ & \textIndus{} \\ \hline
-/nasan/ & \textIndus{} \\ \hline
-/navana/ & \textIndus{} \\ \hline
-/navanaa/ & \textIndus{} \\ \hline
-/nmn/ & \textIndus{} \\ \hline
-/nmna/ & \textIndus{} \\ \hline
-/nn/ & \textIndus{} \\ \hline
-/nna/ & \textIndus{} \\ \hline
-/p/ & \textIndus{} \\ \hline
-/pa/ & \textIndus{} \\ \hline
-/paa/ & \textIndus{} \\ \hline
-/pada/ & \textIndus{} \\ \hline
-/papa/ & \textIndus{} \\ \hline
-/para/ & \textIndus{} \\ \hline
-/r/ & \textIndus{} \\ \hline
-/ra/ & \textIndus{} \\ \hline
-/raa/ & \textIndus{} \\ \hline
-/raaa/ & \textIndus{} \\ \hline
-/raja/ & \textIndus{} \\ \hline
-/raktaa/ & \textIndus{} \\ \hline
-/rar/ & \textIndus{} \\ \hline
-/rara/ & \textIndus{} \\ \hline
-/ras/ & \textIndus{} \\ \hline
-/ri/ & \textIndus{} \\ \hline
-/rrrra/ & \textIndus{} \\ \hline
-/s/ & \textIndus{} \\ \hline
-/sa/ & \textIndus{} \\ \hline
-/saa/ & \textIndus{} \\ \hline
-/saata/ & \textIndus{} \\ \hline
-/sadas/ & \textIndus{} \\ \hline
-/saksaa/ & \textIndus{} \\ \hline
-/samas/ & \textIndus{} \\ \hline
-/san/ & \textIndus{} \\ \hline
-/sara/ & \textIndus{} \\ \hline
-/saras/ & \textIndus{} \\ \hline
-/sas/ & \textIndus{} \\ \hline
-/sava/ & \textIndus{} \\ \hline
-/srsa/ & \textIndus{} \\ \hline
-/t/ & \textIndus{} \\ \hline
-/ta/ & \textIndus{} \\ \hline
-/taaa/ & \textIndus{} \\ \hline
-/taas/ & \textIndus{} \\ \hline
-/tara/ & \textIndus{} \\ \hline
-/tata/ & \textIndus{} \\ \hline
-/u/ & \textIndus{} \\ \hline
-/v/ & \textIndus{} \\ \hline
-/va/ & \textIndus{} \\ \hline
-/vava/ & \textIndus{} \\ \hline
-/y/ & \textIndus{} \\ \hline
-/ya/ & \textIndus{} \\ \hline
-/yaa/ & \textIndus{} \\ \hline
-/yaaa/ & \textIndus{} \\ \hline
+/ / & \textIndus{}$_{100.0\%}$ \\ \hline
+/ a/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/./ & \textIndus{}$_{100.0\%}$ \\ \hline
+/.a/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/a/ & \textIndus{}$_{24.2\%}$ \quad \textIndus{}$_{16.9\%}$ \quad \textIndus{}$_{15.3\%}$ \quad \textIndus{}$_{12.1\%}$ \quad \textIndus{}$_{5.6\%}$ \quad \textIndus{}$_{4.8\%}$ \quad \textIndus{}$_{4.0\%}$ \quad \textIndus{}$_{4.0\%}$ \quad \textIndus{}$_{2.4\%}$ \quad \textIndus{}$_{1.6\%}$ \quad \textIndus{}$_{1.6\%}$ \quad \textIndus{}$_{1.6\%}$ \quad \textIndus{}$_{0.8\%}$ \quad \textIndus{}$_{0.8\%}$ \quad \textIndus{}$_{0.8\%}$ \quad \textIndus{}$_{0.8\%}$ \quad \textIndus{}$_{0.8\%}$ \quad \textIndus{}$_{0.8\%}$ \quad \textIndus{}$_{0.8\%}$ \\ \hline
+/aa/ & \textIndus{}$_{16.0\%}$ \quad \textIndus{}$_{12.4\%}$ \quad \textIndus{}$_{12.2\%}$ \quad \textIndus{}$_{9.2\%}$ \quad \textIndus{}$_{7.4\%}$ \quad \textIndus{}$_{5.9\%}$ \quad \textIndus{}$_{5.2\%}$ \quad \textIndus{}$_{4.3\%}$ \quad \textIndus{}$_{4.3\%}$ \quad \textIndus{}$_{3.3\%}$ \quad \textIndus{}$_{2.2\%}$ \quad \textIndus{}$_{2.0\%}$ \quad \textIndus{}$_{2.0\%}$ \quad \textIndus{}$_{1.7\%}$ \quad \textIndus{}$_{1.6\%}$ \quad \textIndus{}$_{1.3\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{0.8\%}$ \quad \textIndus{}$_{0.8\%}$ \quad \textIndus{}$_{0.7\%}$ \quad \textIndus{}$_{0.7\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \\ \hline
+/aaa/ & \textIndus{}$_{36.5\%}$ \quad \textIndus{}$_{20.6\%}$ \quad \textIndus{}$_{12.7\%}$ \quad \textIndus{}$_{7.9\%}$ \quad \textIndus{}$_{6.3\%}$ \quad \textIndus{}$_{4.8\%}$ \quad \textIndus{}$_{4.8\%}$ \quad \textIndus{}$_{3.2\%}$ \quad \textIndus{}$_{1.6\%}$ \quad \textIndus{}$_{1.6\%}$ \\ \hline
+/aan/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/aaravaa/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/abaa/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/ada/ & \textIndus{}$_{50.0\%}$ \quad \textIndus{}$_{25.0\%}$ \quad \textIndus{}$_{25.0\%}$ \\ \hline
+/adaa/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/aja/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/ajaa/ & \textIndus{}$_{50.0\%}$ \quad \textIndus{}$_{50.0\%}$ \\ \hline
+/ak/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/aka/ & \textIndus{}$_{76.0\%}$ \quad \textIndus{}$_{20.0\%}$ \quad \textIndus{}$_{4.0\%}$ \\ \hline
+/akaa/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/ala/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/am/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/ama/ & \textIndus{}$_{92.8\%}$ \quad \textIndus{}$_{4.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \\ \hline
+/amaa/ & \textIndus{}$_{42.9\%}$ \quad \textIndus{}$_{28.6\%}$ \quad \textIndus{}$_{14.3\%}$ \quad \textIndus{}$_{7.1\%}$ \quad \textIndus{}$_{7.1\%}$ \\ \hline
+/amataa/ & \textIndus{}$_{90.9\%}$ \quad \textIndus{}$_{9.1\%}$ \\ \hline
+/an/ & \textIndus{}$_{59.6\%}$ \quad \textIndus{}$_{18.4\%}$ \quad \textIndus{}$_{7.0\%}$ \quad \textIndus{}$_{6.8\%}$ \quad \textIndus{}$_{3.1\%}$ \quad \textIndus{}$_{1.7\%}$ \quad \textIndus{}$_{1.1\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.0\%}$ \quad \textIndus{}$_{0.0\%}$ \quad \textIndus{}$_{0.0\%}$ \quad \textIndus{}$_{0.0\%}$ \quad \textIndus{}$_{0.0\%}$ \quad \textIndus{}$_{0.0\%}$ \quad \textIndus{}$_{0.0\%}$ \\ \hline
+/ana/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/anaa/ & \textIndus{}$_{70.6\%}$ \quad \textIndus{}$_{11.8\%}$ \quad \textIndus{}$_{5.9\%}$ \quad \textIndus{}$_{5.9\%}$ \quad \textIndus{}$_{5.9\%}$ \\ \hline
+/anaara/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/anan/ & \textIndus{}$_{90.9\%}$ \quad \textIndus{}$_{9.1\%}$ \\ \hline
+/ananan/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/annaa/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/antaraa/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/apa/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/ara/ & \textIndus{}$_{64.3\%}$ \quad \textIndus{}$_{14.3\%}$ \quad \textIndus{}$_{14.3\%}$ \quad \textIndus{}$_{7.1\%}$ \\ \hline
+/araa/ & \textIndus{}$_{50.0\%}$ \quad \textIndus{}$_{50.0\%}$ \\ \hline
+/as/ & \textIndus{}$_{32.8\%}$ \quad \textIndus{}$_{27.0\%}$ \quad \textIndus{}$_{5.4\%}$ \quad \textIndus{}$_{3.6\%}$ \quad \textIndus{}$_{3.4\%}$ \quad \textIndus{}$_{2.5\%}$ \quad \textIndus{}$_{2.5\%}$ \quad \textIndus{}$_{1.8\%}$ \quad \textIndus{}$_{1.6\%}$ \quad \textIndus{}$_{1.3\%}$ \quad \textIndus{}$_{1.1\%}$ \quad \textIndus{}$_{1.1\%}$ \quad \textIndus{}$_{1.1\%}$ \quad \textIndus{}$_{1.1\%}$ \quad \textIndus{}$_{1.1\%}$ \quad \textIndus{}$_{1.1\%}$ \quad \textIndus{}$_{0.9\%}$ \quad \textIndus{}$_{0.9\%}$ \quad \textIndus{}$_{0.7\%}$ \quad \textIndus{}$_{0.7\%}$ \quad \textIndus{}$_{0.7\%}$ \quad \textIndus{}$_{0.7\%}$ \quad \textIndus{}$_{0.7\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \\ \hline
+/asaa/ & \textIndus{}$_{52.9\%}$ \quad \textIndus{}$_{17.6\%}$ \quad \textIndus{}$_{14.7\%}$ \quad \textIndus{}$_{5.9\%}$ \quad \textIndus{}$_{2.9\%}$ \quad \textIndus{}$_{2.9\%}$ \quad \textIndus{}$_{2.9\%}$ \\ \hline
+/asaas/ & \textIndus{}$_{57.1\%}$ \quad \textIndus{}$_{28.6\%}$ \quad \textIndus{}$_{14.3\%}$ \\ \hline
+/asas/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/asi/ & \textIndus{}$_{93.8\%}$ \quad \textIndus{}$_{6.2\%}$ \\ \hline
+/asvaa/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/ata/ & \textIndus{}$_{33.3\%}$ \quad \textIndus{}$_{33.3\%}$ \quad \textIndus{}$_{33.3\%}$ \\ \hline
+/ataa/ & \textIndus{}$_{52.6\%}$ \quad \textIndus{}$_{31.6\%}$ \quad \textIndus{}$_{5.3\%}$ \quad \textIndus{}$_{5.3\%}$ \quad \textIndus{}$_{5.3\%}$ \\ \hline
+/atmaa/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/ava/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/avaa/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/ayaa/ & \textIndus{}$_{50.0\%}$ \quad \textIndus{}$_{50.0\%}$ \\ \hline
+/b/ & \textIndus{}$_{55.0\%}$ \quad \textIndus{}$_{15.0\%}$ \quad \textIndus{}$_{10.0\%}$ \quad \textIndus{}$_{10.0\%}$ \quad \textIndus{}$_{5.0\%}$ \quad \textIndus{}$_{5.0\%}$ \\ \hline
+/ba/ & \textIndus{}$_{31.1\%}$ \quad \textIndus{}$_{20.5\%}$ \quad \textIndus{}$_{17.2\%}$ \quad \textIndus{}$_{12.6\%}$ \quad \textIndus{}$_{6.0\%}$ \quad \textIndus{}$_{4.0\%}$ \quad \textIndus{}$_{4.0\%}$ \quad \textIndus{}$_{1.3\%}$ \quad \textIndus{}$_{0.7\%}$ \quad \textIndus{}$_{0.7\%}$ \quad \textIndus{}$_{0.7\%}$ \quad \textIndus{}$_{0.7\%}$ \quad \textIndus{}$_{0.7\%}$ \\ \hline
+/baba/ & \textIndus{}$_{60.0\%}$ \quad \textIndus{}$_{40.0\%}$ \\ \hline
+/bada/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/c/ & \textIndus{}$_{45.5\%}$ \quad \textIndus{}$_{27.3\%}$ \quad \textIndus{}$_{9.1\%}$ \quad \textIndus{}$_{4.5\%}$ \quad \textIndus{}$_{4.5\%}$ \quad \textIndus{}$_{4.5\%}$ \quad \textIndus{}$_{4.5\%}$ \\ \hline
+/ca/ & \textIndus{}$_{55.5\%}$ \quad \textIndus{}$_{26.5\%}$ \quad \textIndus{}$_{9.8\%}$ \quad \textIndus{}$_{4.3\%}$ \quad \textIndus{}$_{2.4\%}$ \quad \textIndus{}$_{0.9\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \\ \hline
+/caa/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/cara/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/d/ & \textIndus{}$_{40.5\%}$ \quad \textIndus{}$_{16.2\%}$ \quad \textIndus{}$_{8.1\%}$ \quad \textIndus{}$_{5.4\%}$ \quad \textIndus{}$_{5.4\%}$ \quad \textIndus{}$_{5.4\%}$ \quad \textIndus{}$_{5.4\%}$ \quad \textIndus{}$_{2.7\%}$ \quad \textIndus{}$_{2.7\%}$ \quad \textIndus{}$_{2.7\%}$ \quad \textIndus{}$_{2.7\%}$ \quad \textIndus{}$_{2.7\%}$ \\ \hline
+/da/ & \textIndus{}$_{22.7\%}$ \quad \textIndus{}$_{20.4\%}$ \quad \textIndus{}$_{11.6\%}$ \quad \textIndus{}$_{8.8\%}$ \quad \textIndus{}$_{7.3\%}$ \quad \textIndus{}$_{6.2\%}$ \quad \textIndus{}$_{3.8\%}$ \quad \textIndus{}$_{3.6\%}$ \quad \textIndus{}$_{2.3\%}$ \quad \textIndus{}$_{2.3\%}$ \quad \textIndus{}$_{1.8\%}$ \quad \textIndus{}$_{1.3\%}$ \quad \textIndus{}$_{1.1\%}$ \quad \textIndus{}$_{0.8\%}$ \quad \textIndus{}$_{0.7\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \\ \hline
+/daa/ & \textIndus{}$_{96.3\%}$ \quad \textIndus{}$_{1.9\%}$ \quad \textIndus{}$_{1.9\%}$ \\ \hline
+/daada/ & \textIndus{}$_{80.0\%}$ \quad \textIndus{}$_{20.0\%}$ \\ \hline
+/dad/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/dada/ & \textIndus{}$_{40.0\%}$ \quad \textIndus{}$_{40.0\%}$ \quad \textIndus{}$_{20.0\%}$ \\ \hline
+/dadada/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/dak/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/di/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/g/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/ga/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/i/ & \textIndus{}$_{89.7\%}$ \quad \textIndus{}$_{9.7\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.2\%}$ \\ \hline
+/ii/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/iri/ & \textIndus{}$_{50.0\%}$ \quad \textIndus{}$_{50.0\%}$ \\ \hline
+/isan/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/j/ & \textIndus{}$_{60.4\%}$ \quad \textIndus{}$_{31.2\%}$ \quad \textIndus{}$_{8.3\%}$ \\ \hline
+/ja/ & \textIndus{}$_{60.0\%}$ \quad \textIndus{}$_{29.4\%}$ \quad \textIndus{}$_{7.2\%}$ \quad \textIndus{}$_{1.7\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{0.5\%}$ \\ \hline
+/jara/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/jas/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/ji/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/k/ & \textIndus{}$_{45.0\%}$ \quad \textIndus{}$_{15.0\%}$ \quad \textIndus{}$_{15.0\%}$ \quad \textIndus{}$_{10.0\%}$ \quad \textIndus{}$_{10.0\%}$ \quad \textIndus{}$_{5.0\%}$ \\ \hline
+/ka/ & \textIndus{}$_{42.6\%}$ \quad \textIndus{}$_{22.1\%}$ \quad \textIndus{}$_{9.5\%}$ \quad \textIndus{}$_{3.8\%}$ \quad \textIndus{}$_{3.4\%}$ \quad \textIndus{}$_{3.0\%}$ \quad \textIndus{}$_{2.7\%}$ \quad \textIndus{}$_{2.3\%}$ \quad \textIndus{}$_{2.3\%}$ \quad \textIndus{}$_{2.3\%}$ \quad \textIndus{}$_{1.5\%}$ \quad \textIndus{}$_{1.1\%}$ \quad \textIndus{}$_{0.8\%}$ \quad \textIndus{}$_{0.8\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \\ \hline
+/kara/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/ki/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/l/ & \textIndus{}$_{40.0\%}$ \quad \textIndus{}$_{20.0\%}$ \quad \textIndus{}$_{20.0\%}$ \quad \textIndus{}$_{20.0\%}$ \\ \hline
+/la/ & \textIndus{}$_{21.7\%}$ \quad \textIndus{}$_{15.0\%}$ \quad \textIndus{}$_{6.7\%}$ \quad \textIndus{}$_{5.0\%}$ \quad \textIndus{}$_{5.0\%}$ \quad \textIndus{}$_{5.0\%}$ \quad \textIndus{}$_{3.3\%}$ \quad \textIndus{}$_{3.3\%}$ \quad \textIndus{}$_{3.3\%}$ \quad \textIndus{}$_{3.3\%}$ \quad \textIndus{}$_{3.3\%}$ \quad \textIndus{}$_{3.3\%}$ \quad \textIndus{}$_{3.3\%}$ \quad \textIndus{}$_{3.3\%}$ \quad \textIndus{}$_{1.7\%}$ \quad \textIndus{}$_{1.7\%}$ \quad \textIndus{}$_{1.7\%}$ \quad \textIndus{}$_{1.7\%}$ \quad \textIndus{}$_{1.7\%}$ \quad \textIndus{}$_{1.7\%}$ \quad \textIndus{}$_{1.7\%}$ \quad \textIndus{}$_{1.7\%}$ \quad \textIndus{}$_{1.7\%}$ \\ \hline
+/lala/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/m/ & \textIndus{}$_{38.0\%}$ \quad \textIndus{}$_{17.5\%}$ \quad \textIndus{}$_{13.5\%}$ \quad \textIndus{}$_{7.5\%}$ \quad \textIndus{}$_{4.5\%}$ \quad \textIndus{}$_{4.5\%}$ \quad \textIndus{}$_{3.0\%}$ \quad \textIndus{}$_{2.0\%}$ \quad \textIndus{}$_{1.5\%}$ \quad \textIndus{}$_{1.0\%}$ \quad \textIndus{}$_{1.0\%}$ \quad \textIndus{}$_{1.0\%}$ \quad \textIndus{}$_{1.0\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.5\%}$ \\ \hline
+/ma/ & \textIndus{}$_{25.6\%}$ \quad \textIndus{}$_{18.4\%}$ \quad \textIndus{}$_{11.3\%}$ \quad \textIndus{}$_{10.7\%}$ \quad \textIndus{}$_{5.2\%}$ \quad \textIndus{}$_{4.2\%}$ \quad \textIndus{}$_{3.5\%}$ \quad \textIndus{}$_{3.2\%}$ \quad \textIndus{}$_{2.5\%}$ \quad \textIndus{}$_{2.3\%}$ \quad \textIndus{}$_{1.1\%}$ \quad \textIndus{}$_{1.0\%}$ \quad \textIndus{}$_{0.8\%}$ \quad \textIndus{}$_{0.8\%}$ \quad \textIndus{}$_{0.8\%}$ \quad \textIndus{}$_{0.8\%}$ \quad \textIndus{}$_{0.7\%}$ \quad \textIndus{}$_{0.6\%}$ \quad \textIndus{}$_{0.6\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \\ \hline
+/maa/ & \textIndus{}$_{93.8\%}$ \quad \textIndus{}$_{6.2\%}$ \\ \hline
+/maan/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/maha/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/mama/ & \textIndus{}$_{87.5\%}$ \quad \textIndus{}$_{12.5\%}$ \\ \hline
+/mara/ & \textIndus{}$_{66.7\%}$ \quad \textIndus{}$_{33.3\%}$ \\ \hline
+/mi/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/n/ & \textIndus{}$_{47.8\%}$ \quad \textIndus{}$_{37.0\%}$ \quad \textIndus{}$_{6.5\%}$ \quad \textIndus{}$_{2.2\%}$ \quad \textIndus{}$_{2.2\%}$ \quad \textIndus{}$_{2.2\%}$ \quad \textIndus{}$_{2.2\%}$ \\ \hline
+/na/ & \textIndus{}$_{55.3\%}$ \quad \textIndus{}$_{18.5\%}$ \quad \textIndus{}$_{12.8\%}$ \quad \textIndus{}$_{3.1\%}$ \quad \textIndus{}$_{2.7\%}$ \quad \textIndus{}$_{2.5\%}$ \quad \textIndus{}$_{2.1\%}$ \quad \textIndus{}$_{1.1\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \\ \hline
+/naaman/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/naan/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/nadan/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/naktan/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/namaa/ & \textIndus{}$_{92.9\%}$ \quad \textIndus{}$_{7.1\%}$ \\ \hline
+/namama/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/naran/ & \textIndus{}$_{50.0\%}$ \quad \textIndus{}$_{33.3\%}$ \quad \textIndus{}$_{16.7\%}$ \\ \hline
+/narasan/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/nasan/ & \textIndus{}$_{35.0\%}$ \quad \textIndus{}$_{20.0\%}$ \quad \textIndus{}$_{20.0\%}$ \quad \textIndus{}$_{15.0\%}$ \quad \textIndus{}$_{5.0\%}$ \quad \textIndus{}$_{5.0\%}$ \\ \hline
+/navana/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/navanaa/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/nmn/ & \textIndus{}$_{50.0\%}$ \quad \textIndus{}$_{25.0\%}$ \quad \textIndus{}$_{16.7\%}$ \quad \textIndus{}$_{8.3\%}$ \\ \hline
+/nmna/ & \textIndus{}$_{54.4\%}$ \quad \textIndus{}$_{17.5\%}$ \quad \textIndus{}$_{14.0\%}$ \quad \textIndus{}$_{10.5\%}$ \quad \textIndus{}$_{1.8\%}$ \quad \textIndus{}$_{1.8\%}$ \\ \hline
+/nn/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/nna/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/p/ & \textIndus{}$_{63.2\%}$ \quad \textIndus{}$_{31.6\%}$ \quad \textIndus{}$_{5.3\%}$ \\ \hline
+/pa/ & \textIndus{}$_{36.4\%}$ \quad \textIndus{}$_{26.4\%}$ \quad \textIndus{}$_{25.0\%}$ \quad \textIndus{}$_{5.0\%}$ \quad \textIndus{}$_{2.9\%}$ \quad \textIndus{}$_{2.1\%}$ \quad \textIndus{}$_{1.4\%}$ \quad \textIndus{}$_{0.7\%}$ \\ \hline
+/paa/ & \textIndus{}$_{71.4\%}$ \quad \textIndus{}$_{28.6\%}$ \\ \hline
+/pada/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/papa/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/para/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/r/ & \textIndus{}$_{29.4\%}$ \quad \textIndus{}$_{22.4\%}$ \quad \textIndus{}$_{10.6\%}$ \quad \textIndus{}$_{8.2\%}$ \quad \textIndus{}$_{5.9\%}$ \quad \textIndus{}$_{4.7\%}$ \quad \textIndus{}$_{3.5\%}$ \quad \textIndus{}$_{3.5\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{1.2\%}$ \\ \hline
+/ra/ & \textIndus{}$_{16.0\%}$ \quad \textIndus{}$_{15.3\%}$ \quad \textIndus{}$_{12.5\%}$ \quad \textIndus{}$_{12.3\%}$ \quad \textIndus{}$_{8.1\%}$ \quad \textIndus{}$_{7.2\%}$ \quad \textIndus{}$_{6.7\%}$ \quad \textIndus{}$_{3.1\%}$ \quad \textIndus{}$_{2.5\%}$ \quad \textIndus{}$_{1.9\%}$ \quad \textIndus{}$_{1.8\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{0.8\%}$ \quad \textIndus{}$_{0.8\%}$ \quad \textIndus{}$_{0.6\%}$ \quad \textIndus{}$_{0.6\%}$ \quad \textIndus{}$_{0.6\%}$ \quad \textIndus{}$_{0.6\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \\ \hline
+/raa/ & \textIndus{}$_{66.7\%}$ \quad \textIndus{}$_{33.3\%}$ \\ \hline
+/raaa/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/raja/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/raktaa/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/rar/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/rara/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/ras/ & \textIndus{}$_{63.6\%}$ \quad \textIndus{}$_{27.3\%}$ \quad \textIndus{}$_{9.1\%}$ \\ \hline
+/ri/ & \textIndus{}$_{25.0\%}$ \quad \textIndus{}$_{25.0\%}$ \quad \textIndus{}$_{25.0\%}$ \quad \textIndus{}$_{25.0\%}$ \\ \hline
+/rrrra/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/s/ & \textIndus{}$_{31.4\%}$ \quad \textIndus{}$_{25.6\%}$ \quad \textIndus{}$_{20.9\%}$ \quad \textIndus{}$_{5.8\%}$ \quad \textIndus{}$_{3.5\%}$ \quad \textIndus{}$_{3.5\%}$ \quad \textIndus{}$_{2.3\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{1.2\%}$ \\ \hline
+/sa/ & \textIndus{}$_{38.7\%}$ \quad \textIndus{}$_{14.0\%}$ \quad \textIndus{}$_{9.6\%}$ \quad \textIndus{}$_{9.2\%}$ \quad \textIndus{}$_{5.7\%}$ \quad \textIndus{}$_{3.3\%}$ \quad \textIndus{}$_{3.0\%}$ \quad \textIndus{}$_{2.6\%}$ \quad \textIndus{}$_{1.8\%}$ \quad \textIndus{}$_{1.5\%}$ \quad \textIndus{}$_{1.3\%}$ \quad \textIndus{}$_{1.3\%}$ \quad \textIndus{}$_{1.0\%}$ \quad \textIndus{}$_{1.0\%}$ \quad \textIndus{}$_{0.7\%}$ \quad \textIndus{}$_{0.6\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.4\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \quad \textIndus{}$_{0.1\%}$ \\ \hline
+/saa/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/saata/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/sadas/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/saksaa/ & \textIndus{}$_{50.0\%}$ \quad \textIndus{}$_{50.0\%}$ \\ \hline
+/samas/ & \textIndus{}$_{50.0\%}$ \quad \textIndus{}$_{50.0\%}$ \\ \hline
+/san/ & \textIndus{}$_{66.7\%}$ \quad \textIndus{}$_{33.3\%}$ \\ \hline
+/sara/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/saras/ & \textIndus{}$_{66.7\%}$ \quad \textIndus{}$_{33.3\%}$ \\ \hline
+/sas/ & \textIndus{}$_{89.5\%}$ \quad \textIndus{}$_{10.5\%}$ \\ \hline
+/sava/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/srsa/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/t/ & \textIndus{}$_{49.4\%}$ \quad \textIndus{}$_{18.8\%}$ \quad \textIndus{}$_{15.3\%}$ \quad \textIndus{}$_{7.1\%}$ \quad \textIndus{}$_{3.5\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{1.2\%}$ \\ \hline
+/ta/ & \textIndus{}$_{19.8\%}$ \quad \textIndus{}$_{14.2\%}$ \quad \textIndus{}$_{11.5\%}$ \quad \textIndus{}$_{8.3\%}$ \quad \textIndus{}$_{6.5\%}$ \quad \textIndus{}$_{6.3\%}$ \quad \textIndus{}$_{5.2\%}$ \quad \textIndus{}$_{4.2\%}$ \quad \textIndus{}$_{3.1\%}$ \quad \textIndus{}$_{1.8\%}$ \quad \textIndus{}$_{1.7\%}$ \quad \textIndus{}$_{1.4\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{1.2\%}$ \quad \textIndus{}$_{1.1\%}$ \quad \textIndus{}$_{0.9\%}$ \quad \textIndus{}$_{0.8\%}$ \quad \textIndus{}$_{0.8\%}$ \quad \textIndus{}$_{0.6\%}$ \quad \textIndus{}$_{0.6\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \quad \textIndus{}$_{0.2\%}$ \\ \hline
+/taaa/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/taas/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/tara/ & \textIndus{}$_{45.5\%}$ \quad \textIndus{}$_{36.4\%}$ \quad \textIndus{}$_{9.1\%}$ \quad \textIndus{}$_{9.1\%}$ \\ \hline
+/tata/ & \textIndus{}$_{86.7\%}$ \quad \textIndus{}$_{6.7\%}$ \quad \textIndus{}$_{6.7\%}$ \\ \hline
+/u/ & \textIndus{}$_{35.4\%}$ \quad \textIndus{}$_{15.2\%}$ \quad \textIndus{}$_{15.2\%}$ \quad \textIndus{}$_{15.2\%}$ \quad \textIndus{}$_{13.9\%}$ \quad \textIndus{}$_{2.5\%}$ \quad \textIndus{}$_{1.3\%}$ \quad \textIndus{}$_{1.3\%}$ \\ \hline
+/v/ & \textIndus{}$_{83.6\%}$ \quad \textIndus{}$_{16.4\%}$ \\ \hline
+/va/ & \textIndus{}$_{69.5\%}$ \quad \textIndus{}$_{20.0\%}$ \quad \textIndus{}$_{5.0\%}$ \quad \textIndus{}$_{3.3\%}$ \quad \textIndus{}$_{1.7\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.1\%}$ \\ \hline
+/vava/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/y/ & \textIndus{}$_{30.3\%}$ \quad \textIndus{}$_{25.8\%}$ \quad \textIndus{}$_{10.6\%}$ \quad \textIndus{}$_{7.6\%}$ \quad \textIndus{}$_{4.5\%}$ \quad \textIndus{}$_{3.0\%}$ \quad \textIndus{}$_{3.0\%}$ \quad \textIndus{}$_{3.0\%}$ \quad \textIndus{}$_{1.5\%}$ \quad \textIndus{}$_{1.5\%}$ \quad \textIndus{}$_{1.5\%}$ \quad \textIndus{}$_{1.5\%}$ \quad \textIndus{}$_{1.5\%}$ \quad \textIndus{}$_{1.5\%}$ \quad \textIndus{}$_{1.5\%}$ \quad \textIndus{}$_{1.5\%}$ \\ \hline
+/ya/ & \textIndus{}$_{23.4\%}$ \quad \textIndus{}$_{22.4\%}$ \quad \textIndus{}$_{10.0\%}$ \quad \textIndus{}$_{5.0\%}$ \quad \textIndus{}$_{3.7\%}$ \quad \textIndus{}$_{3.4\%}$ \quad \textIndus{}$_{3.2\%}$ \quad \textIndus{}$_{2.6\%}$ \quad \textIndus{}$_{2.1\%}$ \quad \textIndus{}$_{2.1\%}$ \quad \textIndus{}$_{1.8\%}$ \quad \textIndus{}$_{1.6\%}$ \quad \textIndus{}$_{1.6\%}$ \quad \textIndus{}$_{1.3\%}$ \quad \textIndus{}$_{1.3\%}$ \quad \textIndus{}$_{1.3\%}$ \quad \textIndus{}$_{1.1\%}$ \quad \textIndus{}$_{1.1\%}$ \quad \textIndus{}$_{1.1\%}$ \quad \textIndus{}$_{1.1\%}$ \quad \textIndus{}$_{0.8\%}$ \quad \textIndus{}$_{0.8\%}$ \quad \textIndus{}$_{0.8\%}$ \quad \textIndus{}$_{0.8\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.5\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \quad \textIndus{}$_{0.3\%}$ \\ \hline
+/yaa/ & \textIndus{}$_{100.0\%}$ \\ \hline
+/yaaa/ & \textIndus{}$_{100.0\%}$ \\ \hline
 \end{longtable}
 \end{document}
